# qp-plonky2

./: .gitignore  .v12-high-findings-map.tsv  .v12-low-medium-findings-map.tsv  ARCHITECTURE.md  CODE-MOVEMENT-SUMMARY.md  Cargo.toml  README.md  V12-AUDIT-04-REPORT.md  rust-toolchain
.github/workflows/: ci.yml  create-release-proposal.yml  create-release-tag-and-publish.yml
audits/: chain-exploitability-analysis.md
audits/v12/: STARKY-CRITICAL.md  V12-AUDIT-04-REPORT.md
constraint-exporter/: Cargo.toml
constraint-exporter/src/: extract.rs  lib.rs  main.rs  render.rs  symbolic.rs
core/: Cargo.toml  README.md
core/src/: challenger.rs  circuit_config.rs  config.rs  fri.rs  fri_proof.rs  fri_structure.rs  fri_validate_shape.rs  fri_verifier.rs  hash_types.rs  hashing.rs  keccak.rs  lib.rs  merkle_proofs.rs  merkle_tree.rs  plonk_common.rs  poseidon.rs  poseidon2.rs  poseidon_goldilocks.rs  proof.rs  reducing.rs  selectors.rs  strided_view.rs  util.rs
core/src/arch/aarch64/: poseidon_goldilocks_neon.rs
core/src/arch/x86_64/: poseidon_goldilocks_avx2_bmi2.rs
core/src/hash/: mod.rs  path_compression.rs
core/src/iop/: ext_target.rs  hash_target.rs  mod.rs  target.rs  wire.rs
core/src/plonk/: mod.rs  vars.rs
field/: Cargo.toml
field/src/: cosets.rs  field_testing.rs  goldilocks_extensions.rs  goldilocks_field.rs  interpolation.rs  secp256k1_base.rs  secp256k1_scalar.rs  types.rs  zero_poly_coset.rs
field/src/extension/: algebra.rs  quadratic.rs  quartic.rs  quintic.rs
field/src/polynomial/: division.rs  mod.rs
formal/: PLAN.md  Plonky2Bridge.lean  Plonky2Spec.lean  lake-manifest.json  lakefile.toml
formal/Plonky2Spec/: Arithmetic.lean  Basic.lean  Boolean.lean  BridgeProbe.lean  Poseidon2.lean  RangeCheck.lean  Sponge.lean  Wrapper.lean
formal/Plonky2Spec/Bridges/: Poseidon2Bridge.lean
formal/ci/: AxiomsCheck.lean
maybe_rayon/: Cargo.toml
no_std_check/: Cargo.toml
no_std_check/src/: lib.rs
plonky2/: Cargo.toml
plonky2/benches/: hashing.rs
plonky2/examples/: bench_recursion.rs  square_root.rs
plonky2/src/: cross_crate_gate_tests.rs  lib.rs  lookup_test.rs
plonky2/src/batch_fri/: oracle.rs  prover.rs  recursive_verifier.rs  verifier.rs
plonky2/src/fri/: challenges.rs  lazy_oracle.rs  mod.rs  oracle.rs  proof.rs  prover.rs  recursive_verifier.rs  structure.rs  validate_shape.rs  verifier.rs  witness_util.rs
plonky2/src/gadgets/: arithmetic.rs  arithmetic_extension.rs  interpolation.rs  lookup.rs  polynomial.rs  random_access.rs  range_check.rs  select.rs  split_base.rs  split_join.rs
plonky2/src/gates/: arithmetic_base.rs  arithmetic_extension.rs  base_sum.rs  constant.rs  coset_interpolation.rs  exponentiation.rs  gate.rs  gate_testing.rs  lookup.rs  lookup_table.rs  mod.rs  multiplication_extension.rs  noop.rs  poseidon.rs  poseidon2.rs  poseidon2_int_mix.rs  poseidon2_mds.rs  poseidon_mds.rs  public_input.rs  random_access.rs  reducing.rs  reducing_extension.rs  selectors.rs  util.rs
plonky2/src/hash/: batch_merkle_tree.rs  hash_types.rs  hashing.rs  keccak.rs  lazy_merkle_tree.rs  merkle_proofs.rs  merkle_tree.rs  mod.rs  path_compression.rs  poseidon.rs  poseidon2.rs
plonky2/src/iop/: challenger.rs  ext_target.rs  generator.rs  target.rs  wire.rs  witness.rs
plonky2/src/plonk/: circuit_builder.rs  circuit_data.rs  config.rs  get_challenges.rs  lazy_zk.rs  mod.rs  plonk_common.rs  proof.rs  prover.rs  vanishing_poly.rs  verifier.rs  zk.rs
plonky2/src/recursion/: conditional_recursive_verifier.rs  cyclic_recursion.rs  dummy_circuit.rs  recursive_verifier.rs
plonky2/src/util/: context_tree.rs  mod.rs  partial_products.rs  reducing.rs  strided_view.rs
plonky2/src/util/serialization/: gate_serialization.rs  generator_serialization.rs  mod.rs
plonky2/tests/: security_harness.rs
scripts/: check-no-std.sh
starky/: Cargo.toml
starky/src/: config.rs  cross_table_lookup.rs  fibonacci_stark.rs  get_challenges.rs  permutation_stark.rs  proof.rs  prover.rs  recursive_verifier.rs  stark.rs  stark_testing.rs  unconstrained_stark.rs  verifier.rs
util/: Cargo.toml
util/src/: lib.rs
verifier/: Cargo.toml  README.md
verifier/src/: lib.rs
verifier/src/fri/: challenges.rs  mod.rs  proof.rs  reduction_strategies.rs  structure.rs  validate_shape.rs
verifier/src/gates/: arithmetic_base.rs  arithmetic_extension.rs  base_sum.rs  constant.rs  coset_interpolation.rs  exponentiation.rs  gate.rs  lookup.rs  lookup_table.rs  mod.rs  multiplication_extension.rs  noop.rs  packed_util.rs  poseidon.rs  poseidon2.rs  poseidon2_int_mix.rs  poseidon2_mds.rs  poseidon_mds.rs  public_input.rs  random_access.rs  reducing.rs  reducing_extension.rs  selectors.rs
verifier/src/hash/: batch_merkle_tree.rs  hash_types.rs  hashing.rs  merkle_proofs.rs  merkle_tree.rs  mod.rs  path_compression.rs  poseidon.rs  poseidon2.rs
verifier/src/iop/: challenger.rs  ext_target.rs  mod.rs  target.rs
verifier/src/plonk/: circuit_data.rs  config.rs  get_challenges.rs  mod.rs  plonk_common.rs  proof.rs  validate_shape.rs  vanishing_poly.rs  vars.rs  verifier.rs
verifier/src/util/: mod.rs
verifier/src/util/serialization/: gate_serialization.rs  mod.rs
