[workspace]
members = [
  "core",
  "field",
  "maybe_rayon",
  "plonky2",
  "starky",
  "util",
  "verifier",
]
default-members = [
  "core",
  "field",
  "maybe_rayon",
  "plonky2",
  "starky",
  "util",
  "verifier",
]
resolver = "2"

[workspace.dependencies]
ahash = { version = "=0.8.12", default-features = false, features = [
  "compile-time-rng",
] } # NOTE: Be sure to keep this version the same as the dependency in `hashbrown`.
anyhow = { version = "=1.0.100", default-features = false }
hashbrown = { version = "=0.14.5", default-features = false, features = [
  "ahash",
  "serde",
] } # NOTE: When upgrading, see `ahash` dependency.
itertools = { version = "=0.11.0", default-features = false }
log = { version = "=0.4.28", default-features = false }
num = { version = "=0.4.3", default-features = false }
rand = { version = "=0.10.1", default-features = false }
rand_core = { version = "=0.10.0", default-features = false }
serde = { version = "=1.0.228", default-features = false, features = [
  "derive",
] }
static_assertions = { version = "=1.1.0", default-features = false }
unroll = { version = "=0.1.5", default-features = false }

[profile.release]
opt-level = 3
incremental = true
#lto = "fat"
#codegen-units = 1

[profile.bench]
opt-level = 3

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Quantus-Network/qp-plonky2"
repository = "https://github.com/Quantus-Network/qp-plonky2"
keywords = ["cryptography", "SNARK", "FRI", "plonky2", "quantus-network"]
categories = ["cryptography"]

[workspace.lints.clippy]
too_long_first_doc_paragraph = "allow"
