[package]
name = "qp-plonky2-core"
description = "Core traits and types shared between plonky2 prover and verifier"
version = "1.0.0"
authors = [
    "Daniel Lubarov <daniel@lubarov.com>",
    "William Borgeaud <williamborgeaud@gmail.com>",
    "Nicholas Ward <npward@berkeley.edu>",
]
readme = "README.md"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
std = ["anyhow/std", "itertools/use_std", "serde/std"]

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
hashbrown = { workspace = true }
itertools = { workspace = true }
keccak-hash = { version = "0.8.0", default-features = false }
log = { workspace = true }
num = { version = "0.4", default-features = false, features = ["alloc"] }
serde = { workspace = true, features = ["rc"] }
static_assertions = { workspace = true }
unroll = { workspace = true }

# p3 crates for Poseidon2
p3-field = { version = "0.3.0", default-features = false }
p3-goldilocks = { version = "0.3.0", default-features = false }
p3-poseidon2 = { version = "0.3.0", default-features = false }
p3-symmetric = { version = "0.3.0", default-features = false }
qp-poseidon-constants = { version = "1.0", default-features = false }

# Local dependencies
plonky2-field = { package = "qp-plonky2-field", version = "1.1.3", path = "../field", default-features = false }
plonky2_util = { version = "1.0.0", path = "../util", default-features = false }

[lints]
workspace = true
