[package]
name = "qp-plonky2"
description = "Recursive SNARKs based on PLONK and FRI"
version = "1.5.2"
authors = [
  "Daniel Lubarov <daniel@lubarov.com>",
  "William Borgeaud <williamborgeaud@gmail.com>",
  "Nicholas Ward <npward@berkeley.edu>",
]
readme = "README.md"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["gate_testing", "parallel", "chacha", "timing", "thread_rng", "rand"]
gate_testing = []
# Exposes Poseidon2 primitive helpers for `qp-plonky2-constraint-exporter` only.
formal-export = []
parallel = ["hashbrown/rayon", "plonky2_maybe_rayon/parallel"]
std = [
  "anyhow/std",
  "rand/std",
  "itertools/use_std",
  "plonky2-verifier/std",
  "qp-plonky2-core/std",
]
timing = ["std", "dep:web-time"]
rand = ["plonky2-field/rand", "qp-plonky2-core/rand"]
chacha = ["rand/chacha"]
thread_rng = ["rand/thread_rng"]

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
once_cell = { version = "=1.21.3", default-features = false, features = [
  "alloc",
  "race",
  "critical-section",
] }
critical-section = { version = "=1.2.0", default-features = false, features = [
  "std",
] }
hashbrown = { workspace = true }
itertools = { workspace = true }
keccak-hash = { version = "=0.8.0", default-features = false }
qp-poseidon-core = { version = "=2.1.0", default-features = false }
rand = { workspace = true }
log = { workspace = true }
num = { workspace = true }
serde = { workspace = true, features = ["rc"] }
static_assertions = { workspace = true }
unroll = { workspace = true }
web-time = { version = "=1.1.0", optional = true }

# Local dependencies
plonky2-field = { package = "qp-plonky2-field", version = "=1.5.2", path = "../field", default-features = false }
plonky2-verifier = { package = "qp-plonky2-verifier", version = "=1.5.2", path = "../verifier", default-features = false }
plonky2_maybe_rayon = { version = "=1.0.0", path = "../maybe_rayon", default-features = false }
plonky2_util = { version = "=1.0.0", path = "../util", default-features = false }
qp-plonky2-core = { version = "=1.5.2", path = "../core", default-features = false }


[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "=0.4.2", default-features = false, features = [
  "wasm_js",
], optional = true }

[dev-dependencies]
criterion = { version = "=0.5.1", default-features = false }
env_logger = { version = "=0.9.3", default-features = false }
num_cpus = { version = "=1.17.0", default-features = false }
rand = { version = "=0.10.1", features = ["std_rng", "thread_rng"] }
ciborium = { version = "=0.2.2" }
serde_json = { version = "=1.0.145" }
clap = { version = "=4.5.50", features = ["derive", "env"] }
tynm = { version = "=0.1.10", default-features = false }

[target.'cfg(not(target_env = "msvc"))'.dev-dependencies]
jemallocator = "=0.5.4"

[[bin]]
name = "generate_constants"
required-features = ["chacha"]

[[bench]]
name = "field_arithmetic"
harness = false

[[bench]]
name = "ffts"
harness = false

[[bench]]
name = "hashing"
harness = false

[[bench]]
name = "merkle"
harness = false

[[bench]]
name = "transpose"
harness = false

[[bench]]
name = "reverse_index_bits"
harness = false

# Display math equations properly in documentation
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", ".cargo/katex-header.html"]

[lints]
workspace = true

[lib]
name = "plonky2"
