[package]
name = "starky"
description = "Implementation of STARKs"
version = "0.0.13"
authors = [
    "Daniel Lubarov <daniel@lubarov.com>",
    "William Borgeaud <williamborgeaud@gmail.com>",
]
readme = "README.md"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["parallel", "std", "timing"]
parallel = ["qp-plonky2/parallel", "plonky2_maybe_rayon/parallel"]
std = ["anyhow/std", "qp-plonky2/std"]
timing = ["qp-plonky2/timing"]

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
hashbrown = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["rc"] }
num-bigint = { version = "0.4.3", default-features = false }

# Local dependencies
qp-plonky2 = { version = "0.0.13", path = "../plonky2", default-features = false }
plonky2_maybe_rayon = { version = "1.0.0", path = "../maybe_rayon", default-features = false }
plonky2_util = { version = "1.0.0", path = "../util", default-features = false }

[dev-dependencies]
env_logger = { version = "0.9.0", default-features = false }

# Display math equations properly in documentation
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", ".cargo/katex-header.html"]
cargo-args = ["--no-deps"]

[lints]
workspace = true
